more rewrite diagnostics
